fix review on small screens

--- a/components/AnimeReview/styles.module.scss
+++ b/components/AnimeReview/styles.module.scss
@@ -8,17 +8,29 @@
 }
 .description {
   color: $Paragraph;
-  padding-left: 1rem;
+  grid-area: comentary;
+  margin: 0.5rem;
+  padding: 0.3rem;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  max-height: 100px;
+  overflow-y: auto;
+  border: 1px solid #0000001a;
+  box-shadow: 4px 6px 8px #00000010;
 }
 .card {
   position: relative;
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 150px 1fr 1fr;
   grid-template-rows: 80px 1fr;
+  grid-template-areas:
+    "score state watched"
+    "score comentary comentary";
+  place-items: center;
   gap: 0 1rem;
-  padding: 1rem 0;
+  padding: 0.5rem;
   width: 100%;
-  max-width: 600px;
+  max-width: 730px;
   border: 1px solid #0000001a;
   box-shadow: 4px 8px 16px #0000001a;
   border-radius: 5px;
@@ -30,8 +42,12 @@
   }
 }
 
+.comentary {
+  grid-area: comentary;
+}
+
 .score {
-  grid-row: 1 / span 2;
+  grid-area: score;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +60,7 @@
   justify-content: center;
   height: 100px;
   width: 100px;
-  margin-top: 0.5rem;
+  margin: 0.5rem 0;
   border-radius: 50%;
   border: 15px solid green;
   background-color: limegreen;
@@ -71,14 +87,11 @@
   user-select: none;
 }
 
-.state {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  place-items: center;
+.watched {
+  grid-area: watched;
 }
 .stateStamp_viendo {
-  grid-row: 1 / span 2;
+  grid-area: state;
   text-transform: uppercase;
   margin: 0.5rem 0;
   padding: 0.1rem 1rem;
@@ -120,5 +133,20 @@
   &:hover {
     color: $Secondary;
     background: $Accent;
+  }
+}
+
+@media (max-width: 850px) {
+  .card {
+    width: 95%;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
+    gap: 0.5rem 0;
+    grid-template-areas:
+      "score state "
+      "score watched"
+      " comentary comentary";
   }
 }
